code cleanup (#29)